--- a/css/style.css
+++ b/css/style.css
@@ -4,4 +4,100 @@
 
 header {
     position: sticky;
+    background-color: crimson;
 }
+
+header h1 {
+    font-size: 40px;
+    padding: 25px;
+    text-align: center;
+
+}
+
+h3 {
+    font-size: 30px;
+    padding: 15px;
+    text-align: left;
+
+}
+
+footer  {
+    
+
+}
+
+footer h1 {
+    font-size: 40px;
+    padding: 25px;
+    text-align: center;
+    background-color: crimson;
+
+}
+
+.main{
+    margin: auto;
+    width: 100%;
+    max-width: 1100px;
+    top: 50%;
+    left: 50%;
+    
+}
+
+.sidenav a{
+    color: aqua;
+    width: 25%;
+
+}
+
+nav {
+
+    font-family: lato,Verdana, Geneva, Tahoma, sans-serif;  
+    text-transform: uppercase;
+    font-size: 12px;
+  
+  }
+  
+  ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+  }
+  
+ 
+  
+  li a {
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover:not(.active) {
+    background-color: #111;
+  }
+
+
+
+img {
+    width: 100%;
+    max-width: 300px;
+    float: right;
+
+}
+
+
+
+.content {
+    width: 50%;
+
+
+}
+
+.content p{
+    color: blue;
+
+    
+}
+
+
+
