--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,14 @@
 header {
     position: sticky;
     background-color: crimson;
+    color: linen;
 }
 
 header h1 {
     font-size: 50px;
     padding: 25px;
     text-align: center;
+    margin: 0%;
 
 }
 
@@ -21,22 +23,24 @@ h3 {
     text-align: left;
     text-transform: uppercase;
     font-weight: 100;
-    margin-top: -10px;
+    margin-top: 5px;
+    margin-left: 20px;
 
 }
 
 h4 {
-    font-size: 25px;
+    font-size: 20px;
     margin-bottom: 10px;
-    text-align: left;
+    text-align: center;
     text-transform: uppercase;
-    font-weight: 200;
-    margin-top: -5px;
+    font-weight: bold;
+    margin-top: 25px;
 
 
 }
 
 footer  {
+    color: linen;
     
 
 }
@@ -46,6 +50,7 @@ footer h1 {
     padding: 25px;
     text-align: center;
     background-color: crimson;
+    margin: 0%;
 
 }
 
@@ -60,9 +65,7 @@ footer h1 {
   .column {
     flex: 50%;
   }
-  .column25 {
-    flex: 25%;
-  }
+  
 
   .column #box {
 
@@ -75,8 +78,9 @@ footer h1 {
   }
    .column p{
 
-    color: blue;
-    padding: 10px;
+    color: rgb(60, 60, 66);
+    padding: 5px 20px 1px 20px;
+    font-size: 15px;
 
   }
 
@@ -91,20 +95,33 @@ footer h1 {
     
 }
 
-.sidenav a{
-    color: crimson;
-    margin-left: 15px;
+nav {
+
+    flex: 25%;
+    background-color: lightslategrey;
+    color: magenta;
+
+  }
+
+.sidenav {
+    font-family: lato,Verdana, Geneva, Tahoma, sans-serif;  
+    text-transform: uppercase;
+    padding: 25px 40px 100px 40px;
+    text-align: center;
+    font-size: 16px;
+    color: linen;
+    background-color: maroon;
 
 }
 
-nav {
+.sidenav a {
+    color: rgb(196, 196, 196);  
+}
 
-    font-family: lato,Verdana, Geneva, Tahoma, sans-serif;  
-    text-transform: uppercase;
-    font-size: 12px;
-  
-  }
-  
+.sidenav a:hover{
+    color: linen;  
+}
+
 .sidenav ul {
     margin: 0;
     padding: 0;
@@ -112,7 +129,6 @@ nav {
   }
   
 .sidenav  li a {
-    text-align: center;
     padding: 14px 16px;
     text-decoration: none;
   }
@@ -135,3 +151,21 @@ img {
 
 
 }
+
+aside p{
+
+    border: 3px #333333 solid;
+    text-align: center;
+    padding: 10px;
+    width: 60%;
+    margin: 0px auto 10px auto  ;
+
+
+}
+
+.aside {
+    flex: 25%;
+    background-color: lightslategrey;
+
+  }
+
